fixed  portf shadow and change gap into margin

--- a/css/styles.css
+++ b/css/styles.css
@@ -383,9 +383,6 @@ margin-bottom: 16px;
   justify-content: center;
 }
   
-.list-icon-social {
-  gap: 10px;
-}
 
 .link-social-circle {
   display: flex;
@@ -401,10 +398,13 @@ margin-bottom: 16px;
 }
 
 .icon {
-  
   width: 20px;
   height: 20px;
   fill: currentColor;
+}
+
+.icon-item:not(:last-child) {
+  margin-right: 10px;
 }
 
 .link-social-circle:hover {
@@ -441,8 +441,12 @@ margin-bottom: 16px;
 
 .list-partner {
   display: flex;
-  gap: 30px;
 }
+
+.item-partner:not(:last-child) {
+  margin-right: 30px;
+}
+
 
 .icon-partner {
   width: 106px;
@@ -509,7 +513,6 @@ margin-bottom: 16px;
 .list-social-footer {
   display: flex;
   justify-content: center;
-  gap: 10px;
   
 }
 
@@ -532,6 +535,11 @@ margin-bottom: 16px;
   color: var(--theme-color-light);
   background-color: var(--social-footer-bg);
   ;
+}
+
+.address .link:hover,
+.addres .link:focus {
+  color: var(--text-color-hover);
 }
 
 /*Portfolio */
@@ -608,10 +616,13 @@ margin-bottom: 16px;
   width: 370px;
 }
 
+.portf-link {
+  display: block;
+}
+
 .portf-link:hover,
 .portf-link:focus {
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .card-frame {
